--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
       </a>
     </footer>
 
-    <script src="node_modules/shower-core/shower.min.js"></script>
+    <script src="shower/shower.min.js"></script>
     <!-- Copyright © 2018 Alexandr Vetrov -->
   </body>
 </html>
