--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
     <section class="slide">
       <h2>Injector</h2>
         <p>
-            Инжектор — <b>механизм</b>. Angular создает инжектор для всего приложения во время bootstrap 
-            процесса и дополнительные инжекторы по мере необходимости. Вам не нужно создавать инжекторы.
+            Инжектор — <b>механизм</b>
         </p>
+        <img src="./pictures/injector-injects.png" alt="Инжектор зависимостей">
         <p>
-            Инжектор находит зависимости по ключу, создаёт их и поддерживает <i>контейнер</i> экземпляров зависимостей, которые он реиспользует, если это возможно.
+            Инжектор находит зависимости по ключу и создаёт их. Поддерживает <i>контейнер</i> экземпляров зависимостей, которые он переиспользует, если это возможно.
         </p>
     </section>
 
